--- a/wofi/style.css
+++ b/wofi/style.css
@@ -1,55 +1,58 @@
-/* bg: #404040 */
-/* border: #f0dfaf */
-/* text: #f0e4cf */
 window {
-  margin: 0px;
-  border: 1px solid #f0dfaf;
-  background-color: #404040;
+    margin: 0px;
+    background-color: #232136;
+    border-radius: 0px;
+    border: 2px solid #eb6f92;
+    color: #e0def4;
+    font-family: 'Monofur Nerd Font';
+    font-size: 20px;
 }
 
 #input {
-  margin: 5px;
-  border: 1px solid #f0dfaf;
-  color: #f0e4cf;
-  background-color: #404040;
+    margin: 5px;
+    border-radius: 0px;
+    border: none;
+    border-radius: 0px;;
+    color: #eb6f92;
+    background-color: #393552;
+    
 }
 
 #inner-box {
-  margin: 5px;
-  border: none;
-  background-color: #404040;
+    margin: 5px;
+    border: none;
+    background-color: #393552;
+    color: #232136;
+    border-radius: 0px;
 }
 
 #outer-box {
-  margin: 5px;
-  border: none;
-  background-color: #404040;
+    margin: 15px;
+    border: none;
+    background-color: #232136;
 }
 
 #scroll {
-  margin: 0px;
-  border: none;
+    margin: 0px;
+    border: none;
 }
 
 #text {
-  margin: 5px;
-  border: none;
-  color: #f0e4cf;
-}
-
-#entry.activatable #text {
-  color: #404040;
-}
-
-#entry>* {
-  color: #f0e4cf;
-}
+    margin: 5px;
+    border: none;
+    color: #e0def4;
+} 
 
 #entry:selected {
-  background-color: #f3eadb;
+    background-color: #eb6f92;
+    color: #232136;
+    border-radius: 0px;;
+    outline: none;
 }
 
-#entry:selected #text {
-  font-weight: bold;
-  color: #404040;
+#entry:selected * {
+    background-color: #eb6f92;
+    color: #232136;
+    border-radius: 0px;;
+    outline: none;
 }
